kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-svc
spec:
  type: ClusterIP
  selector:
    app: node-js
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
