kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-pintu-ingress
spec:
  rules:
    - host: testing.pintu.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-js-svc
                port:
                  number: 80
